# NoteLifeBackend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: prod.yaml
aws/: eks-cluster.yaml
docker/: docker-compose.yml
kubernetes/: apply.sh  dockerhub-secret.yaml  ingres.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-persistance.yaml  postgres-secret.yaml  postgres-service.yaml  webapp.yaml
migrations/2023-06-02-172316_create_reminders/: down.sql  up.sql
migrations/2023-10-01-161538_create_users/: down.sql  up.sql
migrations/2023-10-04-192902_create_user_sessions/: down.sql  up.sql
migrations/2023-10-05-204334_create_user_session_refresh/: down.sql  up.sql
migrations/2023-10-18-181703_add_user_column_to_reminder/: down.sql  up.sql
migrations/2023-10-18-183050_add_user_column_reference_to_refersh_and_session/: down.sql  up.sql
migrations/2024-02-11-143518_create_user_events/: down.sql  up.sql
nginx/: nginx.conf
secrets/: credentials.json
src/: cors.rs  main.rs  models.rs  schema.rs
src/applications/: general.rs
src/auth/: auth_guard.rs  hash.rs  mod.rs  oauth2.rs  types.rs
src/dto/: event.rs  mod.rs  reminder.rs  users.rs
src/endpoints/: endpoints.rs  events.rs  mod.rs  reminders.rs  types.rs  users.rs
src/repository/: connection.rs  events.rs  migrations.rs  mod.rs  models.rs  reminder.rs  sessions.rs  sessions_refresh.rs  types.rs  user.rs
src/services/: login.rs  mod.rs  types.rs
src/unused/: auth_fairing.rs
