[env]
ENV = "dev"
[package]
name = "note_the_life_backend"
rust-version = "1.69.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features=["json"]}
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "extras", "chrono"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
chrono = { version= "0.4.24", features = ["serde", "rustc-serialize"]}
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.18" }
oauth2 = { version = "4.4.1" }
bcrypt = "0.15"
rand = "0.8.5"
